# myVTKDemo

./: README.md  global_headers.h  vtkInCreator.pro
vtkInCreator/: global_headers.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
vtkInVSWithQt/: CMakeLists.txt  README.md
